--- a/index.html
+++ b/index.html
@@ -1,15 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Template</title>
-    <link rel="icon" type="image/png" href="favicon.png">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css"/>
+    <title>Light Dark Mode</title>
+    <link rel="icon" type="image/png" href="icon.png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css" />
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+    <!-- navigation -->
+    <nav id="nav">
+        <a href="#home">HOME</a>
+        <a href="#about">ABOUT</a>
+        <a href="#projects">PROJECTS</a>
+        <a href="#contact">CONTACT</a>
+
+    </nav> 
+    <!-- home section -->
+    <section id="home">
+        <div class="title-group">
+            <h1>Custom Title here</h1>
+            <h2>Welcome to the website!</h2>
+        </div>
+    </section>
+     <!--about section  -->
+    <section id="about">
+        <h1>Undraw Illustrations</h1>
+        <div class="about-container">
+            <div class="image-container">
+                <h2>Web Innovation</h2>
+                <img src="img/undraw_proud_coder_light.svg" alt="Proud Coder" id="image1">
+            </div>
+            <div class="image-container">
+                <h2>Problem Solving</h2>
+                <img src="img/undraw_feeling_proud_light.svg" alt="Feeling" id="image2">
+            </div>
+            <div class="image-container">
+                <h2>High Concept</h2>
+                <img src="img/undraw_conceptual_idea_light.svg" alt="Idea" id="image3">
+            </div>
+        </div>
+    </section>
+    <!--projects section  -->
+    <section id="projects">
+        <h1>Buttons</h1>
+        <div class="buttons">
+            <button class="primary">Primary</button>
+            <button class="secondary">Secondary</button>
+            <button class="primary" disabled>Disabled</button>
+            <button class="outline">Outline</button>
+            <button class="secondary outline">Alt Outline</button>
+            <button class="outline" disabled>Disabled</button>
+        </div>
+        <div class="text-box" id="text-box">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim mollitia nesciunt officiis aliquam aut quisquam eum architecto explicabo illum dolor reiciendis vel quis voluptatibus et, ea, optio similique! Sed, placeat!</p>
+        </div>
+    </section>
+    <!-- Contact section -->
+    <section id="contact">
+        <div class="social-icons">
+            <i class="fab fa-github"></i>
+            <i class="fab fa-codepen"></i>
+            <i class="fab fa-linkedin"></i>
+            <i class="fab fa-medium"></i>
+            <i class="fab fa-facebook"></i>
+            <i class="fab fa-instagram"></i>
+            <i class="fab fa-youtube"></i>
+        </div>
+    </section> 
+
     <!-- Script -->
     <script src="script.js"></script>
 </body>
+
 </html>
