--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@
 </head>
 
 <body>
+    <!-- dark mode switch -->
+    <div class="theme-switch-wrapper">
+        <span id="toggle-icon">
+            <span class="toggle-text">Light Mode</span>
+            <i class="fas fa-sun"></i>
+        </span>
+        <lebel class="theme-switch">
+            <input type="checkbox" name="checkbox">
+            <div class="slider round"></div>
+        </lebel>
+    </div>
     <!-- navigation -->
     <nav id="nav">
         <a href="#home">HOME</a>
@@ -18,7 +29,7 @@
         <a href="#projects">PROJECTS</a>
         <a href="#contact">CONTACT</a>
 
-    </nav> 
+    </nav>
     <!-- home section -->
     <section id="home">
         <div class="title-group">
@@ -26,7 +37,7 @@
             <h2>Welcome to the website!</h2>
         </div>
     </section>
-     <!--about section  -->
+    <!--about section  -->
     <section id="about">
         <h1>Undraw Illustrations</h1>
         <div class="about-container">
@@ -56,7 +67,9 @@
             <button class="outline" disabled>Disabled</button>
         </div>
         <div class="text-box" id="text-box">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim mollitia nesciunt officiis aliquam aut quisquam eum architecto explicabo illum dolor reiciendis vel quis voluptatibus et, ea, optio similique! Sed, placeat!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim mollitia nesciunt officiis aliquam aut
+                quisquam eum architecto explicabo illum dolor reiciendis vel quis voluptatibus et, ea, optio similique!
+                Sed, placeat!</p>
         </div>
     </section>
     <!-- Contact section -->
@@ -70,7 +83,7 @@
             <i class="fab fa-instagram"></i>
             <i class="fab fa-youtube"></i>
         </div>
-    </section> 
+    </section>
 
     <!-- Script -->
     <script src="script.js"></script>
