--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
             <span class="toggle-text">Light Mode</span>
             <i class="fas fa-sun"></i>
         </span>
-        <lebel class="theme-switch">
-            <input type="checkbox" name="checkbox">
+        <label class="theme-switch">
+            <input type="checkbox">
             <div class="slider round"></div>
-        </lebel>
+        </label>
     </div>
     <!-- navigation -->
     <nav id="nav">
